adapted to compile for Java 1.8